Changed border-width of sign up button to border of 0px to fix correct hover animation not showing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -112,7 +112,7 @@
   background-color:#FFE57B!important;
   color:white;
   border-color: transparent;
-  border-width: 3px;
+  border: 0px;
   font-size: x-large;
   padding: 1%;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
